<resources>
    <string name="app_name">PBP Mart</string>

    <string name="hintEmail">EMAIL</string>
    <string name="hintPassword">PASSWORD</string>
    <string name="hintFirst">FIRST NAME</string>
    <string name="hintLast">LAST NAME</string>
    <string name="hintPhone">PHONE NUMBER</string>
    <string name="hintFullName">FULL NAME</string>
    <string name="hintUsername">USERNAME</string>
    <string name="hintAddress">ADDRESS</string>
    <string name="SignIn">SIGN IN</string>
    <string name="Login">Login</string>
    <string name="SignUp">SIGN UP</string>
    <string name="register">REGISTER</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Cart">Cart</string>
    <string name="Chat">Chat</string>
    <string name="User">User</string>

    <!-- Daniel -->
    <string name="pbp">PBP</string>
    <string name="cart">Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="ongkos_kirim">Ongkos Kirim</string>
    <string name="total_harga">Total Harga</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="image">Image</string>
    <string name="list_barang">List Barang</string>
    <string name="fab_content_desc">fab</string>
    <string name="extended_fab_content_desc">add_to_cart</string>
    <string name="extended_fab_label">Add to Cart</string>
    <string name="list_cart">List Cart</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Enable Dark Mode</string>
    <string name="update_profile">Update Profile Picture</string>
    <string name="username">Username :</string>
    <string name="alamat">Alamat :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="email">Email :</string>
    <string name="nama">Nama :</string>

    <!-- mapbox -->
    <string name="mapbox_access_token">pk.eyJ1IjoidHViZXNwYnBiIiwiYSI6ImNrZzRsamJvNTA4bWYyc3BpbXBwdXZ4MTYifQ.19TDIUtyo8E7oklo14bNSg</string>
    <string name="our_headquarter">Our Headquarter</string>
    <string name="full_address">Full Address</string>
    <string name="contact_us">Contact Us</string>
    <string name="history_pembelian">History Pembelian</string>
    <string name="bmart">BMart</string>
    <string name="history">History</string>
    <string name="user">User</string>
    <string name="image_cart">Image Cart</string>
</resources>