<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".Fragment.Home_Fragment">
    <RelativeLayout
        android:id="@+id/relative_layoutPBP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/list_barang"
            style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_barang"
            android:textStyle="bold"
            android:textColor="?attr/textcolor"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative_layoutPBP">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_Barang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="17dp"
            tools:listitem="@layout/adapter_recycler_view_barang"/>
    </RelativeLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/extended_fab_content_desc"
            android:text="@string/extended_fab_label"
            app:icon="@drawable/ic_baseline_shopping_cart_24"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>