<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/backgroundcolor"
    tools:context=".MapActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundcolor">
        <RelativeLayout
            android:id="@+id/relative_layoutHeadquarters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/headquarters"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_headquarter"
                android:textStyle="bold"
                android:textColor="?attr/textcolor"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_layoutHeadquartersDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_layoutHeadquarters">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/headquarterAddress"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_address"
                android:textStyle="bold"
                android:textColor="?attr/textcolor"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/headquarterAddressFull"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_below="@id/headquarterAddress"
                android:layout_height="wrap_content"
                android:text="Jl. Buntu 9, 9292, Kec. Surakartina, Yogyakarta 552222"
                android:textColor="?attr/textcolor"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_layoutContactUsDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_layoutHeadquartersDetail">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/headquarterContactUs"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textStyle="bold"
                android:textColor="?attr/textcolor"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/headquarterContactUsFull"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_below="@id/headquarterContactUs"
                android:layout_height="wrap_content"
                android:text="0822-1234-5678"
                android:textColor="?attr/textcolor"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_layoutMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_below="@id/relative_layoutContactUsDetail">
            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mapbox_cameraZoom="8" />
        </RelativeLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/navButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="bottom|right"
                app:itemTextColor="?attr/iconcolor"
                android:contentDescription="@string/extended_fab_content_desc"
                android:text="Navigate Me !" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>